[fix][client] Fix thread-safety and refactor MessageCryptoBc key management (#25400)
(cherry picked from commit f70745c68a2a1d8ae08137edf0363e9a7595d1d2)
(cherry picked from commit 748541a50ae8b523c3f4b246d168f8c58702ac4d)